<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">网络测速</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_exit">退出</string>

    <string name="server_a">节点A</string>
    <string name="server_a_ip">"221.228.82.107</string>

    <string name="server_b">节点B</string>
    <string name="server_b_ip">"221.228.82.108</string>

    <string name="pack_len">数据长度</string>
    <string name="pack_len_default">随机长度</string>

    <string name="speed">发包速率</string>
    <string name="speed_default">20(包/秒)</string>

    <string name="timer">测速时长</string>
    <string name="timer_default">120(秒)</string>

    <string name="timeout">读写超时</string>
    <string name="timeout_default">5(秒)</string>

    <string name="buttonStart">开始测速</string>
    <string name="buttonUpload">上传结果</string>
    <string name="buttonUploadOK">上传成功</string>

    <string name="result">测速结果：</string>
    <string name="resultDetail">测速日志：</string>
    <string name="textNil"></string>
    <string name="udp">UDP</string>
    <string name="tcp_conn">TCP Conn</string>
    <string name="tcp_echo">TCP Echo</string>

    <string name="adp_net_stat">当时状态: </string>

    <string name="current_network">当前状态: </string>

    <string name="adp_begin_time">创建时间:</string>

    <string name="adp_size">记录大小:</string>

</resources>
