<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="view.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textViewServerA"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:text="@string/server_a" />

    <EditText
        android:id="@+id/editTextServerA"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignRight="@+id/editTextServerB"
        android:layout_toRightOf="@+id/textViewServerA"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/server_a_ip"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewServerB"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewServerA"
        android:gravity="center"
        android:text="@string/server_b" />

    <EditText
        android:id="@+id/editTextServerB"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignRight="@+id/radioGroup"
        android:layout_alignTop="@+id/textViewServerB"
        android:layout_toRightOf="@+id/textViewServerA"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/server_b_ip"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewPackLen"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextServerB"
        android:gravity="center"
        android:text="@string/pack_len" />

    <EditText
        android:id="@+id/editTextPackLen"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/editTextServerA"
        android:layout_alignTop="@+id/textViewPackLen"
        android:layout_toLeftOf="@+id/textViewSpeed"
        android:ems="10"
        android:hint="@string/pack_len_default"
        android:inputType="number"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewTimeout"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewSpeed"
        android:gravity="center"
        android:text="@string/timeout" />

    <EditText
        android:id="@+id/editTextTimeout"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/editTextServerA"
        android:layout_alignTop="@+id/textViewTimeout"
        android:layout_toLeftOf="@+id/TextViewTimver"
        android:ems="10"
        android:hint="@string/timeout_default"
        android:inputType="number"
        android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTimeout"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioUdpEcho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/udp" >
        </RadioButton>

        <RadioButton
            android:id="@+id/radioTcpConn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tcp_conn" >
        </RadioButton>

        <RadioButton
            android:id="@+id/radioTcpEcho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tcp_echo" >
        </RadioButton>
    </RadioGroup>

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radioGroup"
        android:text="@string/buttonUpload" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radioGroup"
        android:text="@string/buttonStart" />

    <CheckBox
        android:id="@+id/checkBoxB"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPackLen"
        android:layout_alignRight="@+id/buttonStart"
        android:layout_toRightOf="@+id/editTextServerB" />

    <CheckBox
        android:id="@+id/checkBoxA"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextServerB"
        android:layout_alignRight="@+id/buttonStart"
        android:layout_toRightOf="@+id/editTextServerA" />

    <EditText
        android:id="@+id/editTextSpeed"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/buttonStart"
        android:layout_alignTop="@+id/textViewSpeed"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/speed_default"
        android:textSize="14sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewSpeed"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/editTextPackLen"
        android:layout_toLeftOf="@+id/editTextSpeed"
        android:gravity="center"
        android:text="@string/speed" />

    <TextView
        android:id="@+id/TextViewTimver"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_above="@+id/radioGroup"
        android:layout_toLeftOf="@+id/editTextSpeed"
        android:gravity="center"
        android:text="@string/timer" />

    <EditText
        android:id="@+id/EditTextTimer"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/editTextSpeed"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextSpeed"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/timer_default"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonStart"
        android:gravity="center|left"
        android:text="@string/result" />

    <TextView
        android:id="@+id/textViewResultBody"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textViewResult"
        android:background="@drawable/box_border"
        android:gravity="left|top"
        android:singleLine="false"
        android:text="@string/textNil" />

    <TextView
        android:id="@+id/textViewDetail"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/textViewResultBody"
        android:layout_below="@+id/textViewResultBody"
        android:gravity="center|left"
        android:text="@string/resultDetail" />

    <TextView
        android:id="@+id/textViewDetailBody"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textViewDetail"
        android:background="@drawable/box_border"
        android:gravity="left|top"
        android:singleLine="false"
        android:text="@string/textNil" />

</RelativeLayout>